Update styles and popup functionality in index.html
Refactor styles and improve popup rendering for golf course map.

--- a/index.html
+++ b/index.html
@@ -4,160 +4,85 @@
   <meta charset="utf-8" />
   <title>Golf Atlas Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Leaflet (no SRI) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <!-- MarkerCluster -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+
+  <!-- PapaParse -->
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
 
   <style>
-    :root{
-      --brand-green:#0e5135;
-      --dark-1:#0f172a; --dark-2:#111827;
-      --text-strong:#f8fafc; --text:#e5e7eb; --muted:#94a3b8; --link:#38bdf8;
-    }
-    html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans;background:#fff;color:#111827}
-    #app{display:grid;grid-template-rows:auto 1fr;height:100%}
-    header{padding:10px 14px;border-bottom:1px solid #e5e7eb;display:flex;align-items:center;justify-content:space-between;gap:10px}
-    .title{font-weight:800;letter-spacing:.2px;color:var(--brand-green)}
-    .meta{font-size:12px;color:#6b7280}
-    #map{width:100%;height:calc(100vh - 56px)}
+    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; background: #0b1220; }
+    #map { height: 100%; }
 
-    /* Dark popup */
-    .leaflet-popup-content-wrapper{
-      background:linear-gradient(180deg,var(--dark-1),var(--dark-2));
-      color:var(--text);
-      border-radius:14px;border:1px solid rgba(255,255,255,.08);
-      box-shadow:0 14px 30px rgba(0,0,0,.35);
-    }
-    .leaflet-popup-tip{background:var(--dark-2);border:1px solid rgba(255,255,255,.08)}
-    .popup{padding:14px 16px;max-width:360px}
-    .popup h3{margin:0 0 8px 0;font-size:18px;line-height:1.2;font-weight:900;color:var(--text-strong);display:flex;align-items:center;gap:8px;flex-wrap:wrap}
-    .badge{font-size:11px;padding:2px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.18);color:#fef9c3;background:rgba(250,204,21,.12)}
-    .sub{margin:0 10px 10px 0;font-size:13px;color:var(--muted)}
-    .kv{width:100%;border-collapse:collapse;font-size:13px}
-    .kv th{text-align:left;padding:7px 10px 7px 0;color:#cbd5e1;font-weight:700;white-space:nowrap;vertical-align:top}
-    .kv td{padding:7px 0;color:#e5e7eb}
-    .kv tr + tr td, .kv tr + tr th{border-top:1px dashed rgba(255,255,255,.12)}
-    a{color:var(--link);text-decoration:none} a:hover{text-decoration:underline}
-    .pill-yes{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(34,197,94,.18);border:1px solid rgba(34,197,94,.45);color:#bbf7d0;font-weight:800}
-    .pill-no{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(148,163,184,.18);border:1px solid rgba(148,163,184,.4);color:#e2e8f0;font-weight:800}
+    /* === Restored dark, compact popup style === */
+    .leaflet-popup-content-wrapper { background: #0f172a; color: #e5e7eb; border-radius: 10px; box-shadow: 0 16px 36px rgba(0,0,0,0.35); border: 1px solid #334155; }
+    .leaflet-popup-tip { background: #0f172a; border: 1px solid #334155; }
+    .leaflet-popup-content { margin: 8px 10px; line-height: 1.25; }
+    .popup-title { font-weight: 800; font-size: 15px; margin: 0 0 4px; color: #f8fafc; }
+    .popup-line { margin: 0 0 3px; color: #cbd5e1; font-size: 12px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+    .popup-line strong { color: #e2e8f0; }
+    .popup-cta { margin-top: 6px; }
+    .popup-cta a { display:inline-block; text-decoration:none; font-weight:800; font-size:12px; background:#22c55e; color:#0b1220; border:1px solid #16a34a; padding:6px 10px; border-radius:999px; }
+    .popup-cta a:hover { filter:brightness(0.95); }
 
-    /* CTA button */
-    .btn{
-      display:inline-block;margin:6px 0 10px 0;padding:8px 12px;border-radius:10px;
-      background:#0e5135;color:#fff;font-weight:800;border:1px solid rgba(255,255,255,.15);
-      text-decoration:none;box-shadow:0 6px 14px rgba(0,0,0,.35);
-    }
-    .btn:hover{filter:brightness(1.05)}
-
-    /* Debug */
-    #debug{position:fixed;bottom:10px;left:10px;background:rgba(17,24,39,.96);border:1px solid rgba(255,255,255,.1);border-radius:10px;padding:10px 12px;font-size:12px;color:#e5e7eb;max-width:42ch;box-shadow:0 6px 16px rgba(0,0,0,.35);display:none;z-index:9999}
-    #debug pre{margin:6px 0 0 0;white-space:pre-wrap;max-height:25vh;overflow:auto}
-
-    /* Custom flag pin (keep) */
+    /* Keep your current icons */
     .ga-flag-pin{position:relative;transform:translate(-12px,-36px);width:24px;height:36px;filter:drop-shadow(0 3px 6px rgba(0,0,0,.35))}
     .ga-flag-pin svg{display:block}
-    /* Small golf-ball cluster (keep) */
-    .ga-cluster-ball{
-      width:34px;height:34px;border-radius:50%;
-      background:radial-gradient(circle at 30% 30%, #ffffff 0%, #f3f4f6 60%, #e5e7eb 100%);
-      border:1px solid rgba(0,0,0,.18); box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.9);
-      position:relative; display:flex;align-items:center;justify-content:center;
-      font-weight:900;color:#0f172a;
-    }
-    .ga-cluster-ball:before{
-      content:""; position:absolute; inset:4px; border-radius:50%;
-      background: radial-gradient(#d1d5db 1px, transparent 1px) 0 0/6px 6px,
-                  radial-gradient(#cbd5e1 1px, transparent 1px) 3px 3px/6px 6px;
-      opacity:.65; mix-blend-mode:multiply;
-    }
+    .ga-cluster-ball{width:34px;height:34px;border-radius:50%;background:radial-gradient(circle at 30% 30%, #ffffff 0%, #f3f4f6 60%, #e5e7eb 100%);border:1px solid rgba(0,0,0,.18);box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.9);position:relative;display:flex;align-items:center;justify-content:center;font-weight:900;color:#0f172a;}
+    .ga-cluster-ball:before{content:"";position:absolute;inset:4px;border-radius:50%;background:radial-gradient(#d1d5db 1px, transparent 1px) 0 0/6px 6px,radial-gradient(#cbd5e1 1px, transparent 1px) 3px 3px/6px 6px;opacity:.65;mix-blend-mode:multiply;}
     .ga-cluster-wrap{filter:drop-shadow(0 3px 6px rgba(0,0,0,.35))}
   </style>
 </head>
 <body>
-  <div id="app">
-    <header>
-      <div class="title">Golf Atlas — U.S. Courses Map</div>
-      <div class="meta" id="meta"></div>
-    </header>
-    <div id="map"></div>
-  </div>
-
-  <div id="debug">
-    <strong>Debug</strong>
-    <pre id="debugLog"></pre>
-  </div>
+  <div id="map"></div>
 
   <script>
-    /* --- Query + Debug --- */
+    /* -------- helpers -------- */
     const qs = new URLSearchParams(location.search);
     const CSV_URL = qs.get('csv') || '';
-    const DEBUG = qs.get('debug') === '1';
-    const debugBox = () => document.getElementById('debug');
-    const debugLog = () => document.getElementById('debugLog');
-    function log(...args){
-      if(!DEBUG) return;
-      console.log('[DEBUG]',...args);
-      const el = debugLog();
-      if(el) el.textContent += args.map(a=>{ try{return typeof a==='string'?a:JSON.stringify(a);}catch{return String(a);} }).join(' ') + '\n';
-    }
-    if(DEBUG) debugBox().style.display='block';
-    window.addEventListener('error', e => log('JS error:', e.message, 'at', e.filename+':'+e.lineno+':'+e.colno));
-    document.getElementById('meta').textContent = CSV_URL ? 'Data source: CSV param detected' : 'No CSV provided';
 
-    /* --- Helpers --- */
-    function getLatLng(row){
-      const keys = Object.keys(row);
-      const lookup = Object.fromEntries(keys.map(k => [k.toLowerCase(), k]));
-      const latKey = ['lat','latitude','lat_dd'].find(k => lookup[k]);
-      const lngKey = ['lng','lon','long','longitude','lng_dd','lon_dd'].find(k => lookup[k]);
-      const lat = latKey ? parseFloat(row[lookup[latKey]]) : NaN;
-      const lng = lngKey ? parseFloat(row[lookup[lngKey]]) : NaN;
-      if(!isFinite(lat) || !isFinite(lng)) return null;
-      return [lat,lng];
-    }
     const V = (row,key)=> (row && row[key]!=null) ? String(row[key]).trim() : '';
     const safe = (s)=> String(s).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;').replaceAll('"','&quot;').replaceAll("'",'&#39;');
 
-    // Robust course title resolver
-    function getCourseTitle(row){
-      // 1) explicit priority list
-      const PREFERRED = ['course','course_name','name','club','club_name','golf_course','resort','resort_name','Course','Name'];
-      for (const k of PREFERRED){ const v = V(row,k); if (v) return v; }
-      // 2) fuzzy: first key that contains "course" or ends with "name"
-      for (const key of Object.keys(row)){
-        const lk = key.toLowerCase();
-        if ((lk.includes('course') || lk.endsWith('name')) &&
-            !lk.includes('website') && !lk.includes('booking')) {
-          const v = V(row,key); if (v) return v;
-        }
-      }
-      return 'Course'; // final fallback
+    function getLatLng(row){
+      const keys = Object.keys(row);
+      const mapK = Object.fromEntries(keys.map(k=>[k.toLowerCase(),k]));
+      const latK = ['lat','latitude','lat_dd'].find(k=>mapK[k]);
+      const lngK = ['lng','lon','long','longitude','lng_dd','lon_dd'].find(k=>mapK[k]);
+      const lat = latK ? parseFloat(row[mapK[latK]]) : NaN;
+      const lng = lngK ? parseFloat(row[mapK[lngK]]) : NaN;
+      if(!isFinite(lat)||!isFinite(lng)) return null;
+      return [lat,lng];
     }
 
-    const yesNoPill = (val)=>{
-      const v=(val||'').toLowerCase();
-      if(v.startsWith('y')) return `<span class="pill-yes">Yes</span>`;
-      if(v.startsWith('n')) return `<span class="pill-no">No</span>`;
-      return safe(val);
-    };
+    // Robust title resolver (ensures course name always shows)
+    function getCourseTitle(row){
+      const PREFERRED = ['course_name','course','name','club','club_name','Course','Name','Title'];
+      for (const k of PREFERRED){ const v = V(row,k); if (v) return v; }
+      for (const key of Object.keys(row)){ const lk=key.toLowerCase(); if ((lk.includes('course')||lk.endsWith('name')) && !lk.includes('website') && !lk.includes('booking')) { const v=V(row,key); if (v) return v; } }
+      return 'Course';
+    }
+
     function bestURL(row){
       const candidates = ['website','url','website_url','web','site','link','Booking','booking_url','Website','URL'];
       for (const k of candidates){ const v = V(row,k); if (v) return v; }
       return '';
     }
-    const linkHost = (url)=>{ try{const u=new URL(url); return u.hostname.replace(/^www\./,'');}catch{return url;} };
-    const rowHTML=(label,html)=> `<tr><th>${label}</th><td>${html}</td></tr>`;
 
-    /* --- Icons (keep) --- */
+    /* -------- icons (keep) -------- */
     function flagDivIcon(){
       const svg = `
         <svg width="24" height="36" viewBox="0 0 24 36" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 0 C7 0 3 4 3 9c0 7 9 18 9 18s9-11 9-18c0-5-4-9-9-9z" fill="#0e5135" stroke="white" stroke-width="1.2"/>
           <rect x="11.2" y="6" width="1.6" height="10" fill="#e5e7eb"/>
-          <path d="M12.8 6 L20 8.8 L12.8 11.6 Z" fill="#f43f5e"/>
+          <path d="M12.8 6 L20 8.8 L12.8 11.6 Z" fill="#16a34a"/>
           <ellipse cx="12" cy="33.5" rx="6.5" ry="2.5" fill="rgba(0,0,0,.25)"/>
         </svg>`;
       return L.divIcon({ className:'ga-flag-pin', html:svg, iconSize:[24,36], iconAnchor:[12,36], popupAnchor:[0,-34] });
@@ -167,60 +92,54 @@
       return L.divIcon({ html:`<div class="ga-cluster-ball">${count}</div>`, className:'ga-cluster-wrap', iconSize:[34,34] });
     }
 
-    /* --- Popup renderer --- */
+    /* -------- popup (restored visual + your fields) -------- */
     function renderPopup(row){
-      const title = getCourseTitle(row);               // <-- robust title
-      const city  = V(row,'city');
-      const state = V(row,'state') || V(row,'st') || V(row,'State');
-      const subline = [city,state].filter(Boolean).join(', ');
+      const title  = getCourseTitle(row);
+      const city   = V(row,'city');
+      const state  = V(row,'state') || V(row,'st');
+      const region = V(row,'region') || V(row,'Region');
 
       const top100 = V(row,'top_100_ranking');
       const par    = V(row,'par');
       const yard   = V(row,'yardage(black_tees)');
       const arch   = V(row,'architect');
-      const cost   = V(row,'cost_per_course(green_fee_range_)');
+      const price  = V(row,'cost_per_course(green_fee_range_)');
       const stay   = V(row,'stay_and_play(yes_no)');
       const lodgeY = V(row,'lodging_on-site(yes_no)');
       const lodgeN = V(row,'lodging_details');
       const season = V(row,'peak_season/best_time_to_visit');
-      const region = V(row,'region') || V(row,'Region');
-      const siteURL= bestURL(row); // <-- for CTA button
+      const siteURL= bestURL(row);
 
-      const badges = [];
-      if (top100) badges.push(`<span class="badge">🏆 Top 100: ${safe(top100)}</span>`);
-      if (par)    badges.push(`<span class="badge">Par ${safe(par)}</span>`);
-      if (yard)   badges.push(`<span class="badge">${safe(yard)} yds</span>`);
+      const lines = [];
+      if (state || city) lines.push(`<p class="popup-line">📍 <strong>Location:</strong> ${safe([city,state].filter(Boolean).join(', '))}</p>`);
+      if (region)        lines.push(`<p class="popup-line">🗺️ <strong>Region:</strong> ${safe(region)}</p>`);
+      if (top100)        lines.push(`<p class="popup-line">🏆 <strong>Top 100:</strong> ${safe(top100)}</p>`);
+      if (par)           lines.push(`<p class="popup-line">⛳ <strong>Par:</strong> ${safe(par)}</p>`);
+      if (yard)          lines.push(`<p class="popup-line">📏 <strong>Yardage:</strong> ${safe(yard)} yds</p>`);
+      if (arch)          lines.push(`<p class="popup-line">🏗️ <strong>Architect:</strong> ${safe(arch)}</p>`);
+      if (price)         lines.push(`<p class="popup-line">💵 <strong>Price:</strong> ${safe(price)}</p>`);
+      if (stay)          lines.push(`<p class="popup-line">🛌 <strong>Stay &amp; Play:</strong> ${safe(stay)}</p>`);
+      if (lodgeY)        lines.push(`<p class="popup-line">🏨 <strong>On-site Lodging:</strong> ${safe(lodgeY)}</p>`);
+      if (lodgeN)        lines.push(`<p class="popup-line">📝 <strong>Lodging notes:</strong> ${safe(lodgeN)}</p>`);
+      if (season)        lines.push(`<p class="popup-line">📅 <strong>Best season:</strong> ${safe(season)}</p>`);
 
-      const rows = [];
-      if (region) rows.push(rowHTML('🗺️ Region', safe(region)));
-      if (stay)   rows.push(rowHTML('🛌 Stay & Play', yesNoPill(stay)));
-      if (lodgeY) rows.push(rowHTML('🏨 On-site Lodging', yesNoPill(lodgeY)));
-      if (lodgeN) rows.push(rowHTML('📝 Lodging Notes', safe(lodgeN)));
-      if (season) rows.push(rowHTML('📆 Best Season', safe(season)));
-      if (arch)   rows.push(rowHTML('🏗️ Architect', safe(arch)));
-      if (cost)   rows.push(rowHTML('💵 Cost', safe(cost)));
-      // Phone removed by request
-      if (!rows.length) rows.push(`<tr><td colspan="2" class="sub">No extra details yet.</td></tr>`);
-
-      const cta = siteURL ? `<a class="btn" href="${siteURL}" target="_blank" rel="noopener">Visit Course Website</a>` : '';
+      const cta = siteURL ? `<p class="popup-cta"><a href="${siteURL}" target="_blank" rel="noopener">Visit Course Website ↗</a></p>` : '';
 
       return `
-        <div class="popup">
-          <h3>⛳ ${safe(title)} ${badges.join(' ')}</h3>
-          ${subline ? `<p class="sub">${safe(subline)}</p>` : ''}
-          ${cta}
-          <table class="kv" role="table"><tbody>${rows.join('')}</tbody></table>
-        </div>
+        <h3 class="popup-title">🏌️‍♂️ ${safe(title)}</h3>
+        ${lines.join('')}
+        ${cta}
       `;
     }
 
-    /* --- Map --- */
-    const map = L.map('map',{zoomControl:true});
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png',{
-      attribution:'&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a> &copy; <a href="https://carto.com/attributions">CARTO</a>'
+    /* -------- map -------- */
+    const map = L.map('map', { zoomControl:true });
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+      attribution:'&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a> &copy; <a href="https://carto.com/">CARTO</a>'
     }).addTo(map);
-    const CONUS_BOUNDS = L.latLngBounds([24.5,-125.0],[49.6,-66.9]);
-    map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
+
+    const lower48 = L.latLngBounds([[25.0,-125.0],[49.5,-66.5]]);
+    map.fitBounds(lower48, { padding:[20,20] });
 
     const cluster = L.markerClusterGroup({
       showCoverageOnHover:false,
@@ -229,32 +148,30 @@
       iconCreateFunction: clusterIconCreateFunction
     }).addTo(map);
 
+    /* -------- load CSV + plot -------- */
     (function init(){
-      if(!CSV_URL){ log('No CSV URL supplied. Add ?csv=<published CSV URL>'); return; }
-      log('Fetching CSV from', CSV_URL);
-      Papa.parse(CSV_URL,{
+      if(!CSV_URL){ console.warn('No CSV URL. Use ?csv=<published CSV URL>'); return; }
+      Papa.parse(CSV_URL, {
         download:true, header:true, dynamicTyping:false, skipEmptyLines:true,
-        complete:(results)=>{
-          const rows = results.data || [];
-          log('Parsed rows:', rows.length);
-          plotRows(rows);
+        complete:(res)=>{
+          const rows = res.data || [];
+          plot(rows);
         },
-        error:(err)=>{ console.error('CSV parse error:',err); log('CSV parse error:', String(err)); }
+        error:(err)=> console.error('CSV parse error:', err)
       });
     })();
 
-    function plotRows(rows){
-      const bounds = L.latLngBounds([]); let plotted = 0;
-      rows.forEach((row, idx)=>{
+    function plot(rows){
+      const bounds = L.latLngBounds([]); let n=0;
+      rows.forEach((row)=>{
         const latlng = getLatLng(row);
-        if(!latlng){ log(`Row ${idx} missing/invalid lat/lng`, row); return; }
-        const marker = L.marker(latlng, { title: getCourseTitle(row), icon: flagDivIcon() });
-        marker.bindPopup(renderPopup(row), {maxWidth:380});
-        cluster.addLayer(marker);
-        bounds.extend(latlng); plotted++;
+        if(!latlng) return;
+        const m = L.marker(latlng, { icon: flagDivIcon(), title: getCourseTitle(row) });
+        m.bindPopup(renderPopup(row), { maxWidth: 360 });
+        cluster.addLayer(m);
+        bounds.extend(latlng); n++;
       });
-      if(plotted>0) map.fitBounds(bounds.pad(0.08)); else map.fitBounds(CONUS_BOUNDS,{padding:[20,20]});
-      log('Markers plotted:', plotted);
+      if(n>0) map.fitBounds(bounds.pad(0.08));
     }
   </script>
 </body>
